# robot-inteligente

./: .gitignore  .replit  LICENSE  README.md  README_CONFIGURACION.md  analyze_space.py  cleanup_duplicated_files.py  config.py  config_example.json  config_manager.html  dashboard.html  debug_dashboard.html  debug_google_drive.py  debug_monitor.py  documentos_rocastor.html  drive_viewer.html  ejemplo_automatizacion.py  ejemplo_envio_carpeta.js  endpoint_automatizacion.py  enviar_a_robot_ai.py  get_drive_links.py  index.html  main.py  maintenance_optimizer.py  migrate_to_drive.py  optimize_editor.py  optimize_vision_ai.py  optimize_vision_processing.py  panel_filtros.html  process_app_generator.py  pyproject.toml  render.yaml  requirements.txt  setup_robot.py  smart_cleanup.py  test_reconocimiento.html
modules/: ai_analyzer.py  analytics.py  document_processor.py  file_generators.py  google_drive_client.py  rocastor_manager.py
