[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.38.46",
    "botocore>=1.38.46",
    "camelot-py[cv]>=1.0.0",
    "docx>=0.2.4",
    "fastapi>=0.115.13",
    "markitdown>=0.1.2",
    "numpy>=2.3.0",
    "openai>=1.88.0",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.7",
    "pillow>=11.2.1",
    "pymupdf>=1.26.1",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "replit-object-storage>=1.0.2",
    "reportlab>=4.4.2",
    "streamlit>=1.46.0",
    "tabula>=1.0.5",
    "tabula-py[speedups]==2.10.0",
    "uvicorn>=0.34.3",
]
